<resources>
    <string name="app_name">Welfare</string>
    <string name="title_pet">Pet</string>
    <string name="title_res">Residence</string>
    <string name="ok">OK</string>
    <string name="invalid_server_response">Invalid Server Response.</string>
    <string name="connection_error">A connection error occurred, please ensure a stable internet connection is available and try again.</string>
    <string name="channel_id">WELFARE_CHANNEL</string>
    <string name="channel_name">welfare_channel</string>
    <string name="channel_description">The notification channel for the Welfare app.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="remember_me">Remember Me</string>
    <string name="signing_in">Signing in...</string>
    <string name="app_logo">Welfare Logo</string>
    <string name="login_call_error">Error while creating login request.</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="user_name">User Name</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="animals">Pets</string>
    <string name="residences">Residences</string>
    <string name="description">Description</string>
    <string name="reminders">Reminders</string>
    <string name="updating_reminder_data">Updating Reminder...</string>
    <string name="retrieving_reminder_data">Retrieving Reminder Data...</string>
    <string name="delete_reminder_data">Deleting Reminder Data...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reminder_update_internal_err">An internal error occurred while trying to update reminder. Please try again.</string>
    <string name="reminder_update_unknown_err">An unknown error occurred while trying to update reminder. Please try again.</string>
    <string name="reminder_update_conn_err">A connection error occurred while trying to update reminder info. Please check your connection and try again.</string>
    <string name="internal_error_reminder_search">An internal error occurred while trying to retrieve reminder info. Some information might be missing or incorrect.</string>
    <string name="conn_error_reminder_search">A connection error occurred while trying to retrieve reminder info. Please check your connection and try again.</string>
    <string name="unknown_error_reminder_search">An unknown error occurred while trying to retrieve reminder info. Please try again later.</string>
    <string name="search_reminders">Retrieving Reminders...</string>
    <string name="conn_error_reminder">A connection error occurred while trying to retrieve reminder info. Please check your connection and try again.</string>
    <string name="unknown_error_reminder">An unknown error occurred while trying to retrieve reminder info. Please try again later.</string>
    <string name="internal_error_reminder">An internal error occurred while trying to retrieve reminder info. Please try again later.</string>
    <string name="pet_search_err_view">Pet search had no results or an error occurred. Try again later.</string>
    <string name="search_pet_name">Pet Name</string>
    <string name="pet_search_title">Search and Choose a pet</string>
    <string name="search_pets">Searching Pets...</string>
    <string name="updating_pet_data">Updating Pet...</string>
    <string name="retrieving_pet_data">Retrieving Pet...</string>
    <string name="search_pet_name_res">Name:</string>
    <string name="search_pet_species_res">Species:</string>
    <string name="search_pet_dob_res">DOB:</string>
    <string name="search_pet_gender_res">Gender:</string>
    <string name="all">All</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_pet_sterilised_res">Sterilised:</string>
    <string name="search_pet_dob">Approx. Date of Birth</string>
    <string name="pet_det_req">Please provide at least the pet name and species.</string>
    <string name="unknown_error_pet_search">An unknown error occurred while trying to retrieve pet info. Please try again later.</string>
    <string name="pet_download_err">An error occurred trying to retrieve data for this pet. Please try again.</string>
    <string name="pet_update_conn_err">A connection error occurred while trying to update pet info. Please check your connection and try again.</string>
    <string name="conn_error_pet_search">A connection error occurred while trying to retrieve pet info. Please check your connection and try again.</string>
    <string name="internal_error_pet_search">An internal error occurred while trying to retrieve pet info. Some information might be missing or incorrect.</string>
    <string name="pet_update_internal_err">An internal error occurred while trying to update pet. Please try again.</string>
    <string name="pet_update_unknown_err">An unknown error occurred while trying to update pet. Please try again.</string>
    <string name="remove_pet_title">Remove pet from residence?</string>
    <string name="delete_pet_title">Permanently remove Pet?</string>
    <string name="delete_res_title">Permanently remove Residence?</string>
    <string name="delete_reminder_title">Permanently remove Reminder?</string>
    <string name="delete_res_msg">Are you sure you want to permanently delete this residence off the system? This action can not be undone.</string>
    <string name="delete_pet_msg">Are you sure you want to permanently delete this pet off the system? This action can not be undone.</string>
    <string name="delete_reminder_msg">Are you sure you want to permanently delete this reminder off the system? This action can not be undone.</string>
    <string name="remove_pet_message" formatted="true">Are you sure you want to remove %1$s from this residence?</string>
    <string name="remove_pet_yes">Remove Pet</string>
    <string name="remove_pet_no">Cancel</string>
    <string name="retrieving_res_data">Retrieving Residence...</string>
    <string name="updating_res_data">Updating Residence...</string>
    <string name="delete_res_data">Deleting residence permanently...</string>
    <string name="search_address">Street Address</string>
    <string name="search_shack">Shack ID</string>
    <string name="search_res_animals">Pets:</string>
    <string name="search_res_all_sterilised">All Sterilised:</string>
    <string name="search_residence">Searching Residence</string>
    <string name="search_street_address">Street Address:</string>
    <string name="search_shack_id">Shack ID:</string>
    <string name="search_res_name">Resident Name</string>
    <string name="search_res_id">ID Number</string>
    <string name="search_res_tel">Resident Tel</string>
    <string name="search_latitude">Lat:</string>
    <string name="search_resident_name">Resident:</string>
    <string name="search_resident_id">ID:</string>
    <string name="search_resident_tel">Tel:</string>
    <string name="search_longitude">Long:</string>
    <string name="add_pet">Add Pet</string>
    <string name="address_shack_req">Please provide at least the address or the shack id.</string>
    <string name="res_update_internal_err">An internal error occurred while trying to update residence. Please try again.</string>
    <string name="res_update_unknown_err">An unknown error occurred while trying to update residence. Please try again.</string>
    <string name="res_download_err">An error occurred trying to retrieve data for this residence. Please try again.</string>
    <string name="res_search_err_view">Resident search had no results or an error occurred. Try again later.</string>
    <string name="res_update_conn_err">A connection error occurred while trying to update resident info. Please check your connection and try again.</string>
    <string name="conn_error_res_search">A connection error occurred while trying to retrieve Resident info. Please check your connection and try again.</string>
    <string name="internal_error_res_search">An internal error occurred while trying to retrieve Resident info. Some information might be missing or incorrect.</string>
    <string name="res_search_data_required">Please provide at least one entry in the search fields to do a search.</string>
    <string name="unknown_error_res_search">An unknown error occurred while trying to retrieve Resident info. Please try again later.</string>
    <string name="reminder_title">Reminder</string>
    <string name="choose_date">Choose a date on which the reminder should be sent:</string>
    <string name="remove_pet_reminder_title">Remove pet from reminder?</string>
    <string name="remove_pet__reminder_message" formatted="true">Are you sure you want to remove %1$s from this reminder?</string>
    <string name="date_required">Date required to set reminder</string>
    <string name="cannot_edit_today">Cannot edit a reminder set for today or earlier. Please create a new reminder instead.</string>
    <string name="not_editable">Not Editable</string>
    <string name="reminder_download_err">An error occurred trying to retrieve data for this reminder. Please try again.</string>
    <string name="reminders_empty_view">No reminders at this time, or an error occurred. To get started, add a reminder using the clock button in the bottom right of the screen, else try and refresh the view.</string>
    <string name="deleting_pet_from_sys">Deleting pet from system...</string>
    <string name="delete_done">Delete Completed</string>
    <string name="delete_error">Delete Error</string>
    <string name="delete_error_msg">An error occurred while trying to delete. Please try again.</string>
    <string name="delete_error_internal_msg">An internal error occurred while trying to delete. Please try again.</string>
    <string name="delete_error_timeout_msg">An error occurred while trying to delete. Please check your data connection and try again.</string>
    <string name="delete">Delete</string>
    <string name="keep">Keep</string>
    <string name="any">Any</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="curr_res">Current Residence:</string>
    <string name="unknown">Unknown</string>
    <string name="change_res">Change Residence</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="download_err">Download Error</string>
    <string name="data_required">Data Required</string>
    <string name="notes">Notes</string>
    <string name="treatments">Treatments</string>
    <string name="no_change">No Data Changed</string>
    <string name="fetch_error_title">Error Fetching Data</string>
    <string name="update_error_title">Error Updating Data</string>
    <string name="nothing_to_see">Nothing to see here</string>
    <string name="retry">Retry</string>
    <string name="species">Species</string>
    <string name="update_successful">Changes submitted successfully!</string>
    <string name="version">Version:</string>
</resources>