<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_street_address"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/street_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_shack_id"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/shack_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_resident_name"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/resident_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_resident_id"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/resident_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_resident_tel"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/resident_tel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_res_animals"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/animals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_res_all_sterilised"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/text_gap"
            android:layout_marginRight="@dimen/text_gap"/>
        <TextView
            android:id="@+id/all_steri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
