<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.HomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:animateLayoutChanges="true">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:src="@android:drawable/ic_menu_search"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/search_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_padding"
            android:background="@color/light_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/species"/>
            <Spinner
                android:id="@+id/species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_pet_name"
                android:layout_marginBottom="@dimen/general_padding"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pet_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_pet_gender_res"/>
            <RadioGroup
                android:id="@+id/selection_gender"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/all_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button_background"
                    android:textColor="@android:color/white"
                    android:button="@null"
                    android:padding="@dimen/button_padding"
                    android:gravity="center_horizontal" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/male_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button_background"
                    android:textColor="@android:color/white"
                    android:button="@null"
                    android:padding="@dimen/button_padding"
                    android:gravity="center_horizontal"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/female_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button_background"
                    android:textColor="@android:color/white"
                    android:button="@null"
                    android:padding="@dimen/button_padding"
                    android:gravity="center_horizontal"/>
            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_pet_sterilised_res"/>
            <RadioGroup
                android:id="@+id/selection_sterilised"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/all_check_sterilised"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button_background"
                    android:textColor="@android:color/white"
                    android:button="@null"
                    android:padding="@dimen/button_padding"
                    android:gravity="center_horizontal"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/yes_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button_background"
                    android:textColor="@android:color/white"
                    android:button="@null"
                    android:padding="@dimen/button_padding"
                    android:gravity="center_horizontal"/>

                <Space
                    android:layout_width="8dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/no_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_button_background"
                    android:textColor="@android:color/white"
                    android:button="@null"
                    android:padding="@dimen/button_padding"
                    android:gravity="center_horizontal"/>
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:drawableLeft="@android:drawable/ic_menu_search"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <Space
                    android:layout_width="5dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ListView
        android:id="@+id/result_pets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/general_padding"
        android:paddingRight="@dimen/general_padding"
        android:dividerHeight="1dip"
        android:divider="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/scroller"
        app:layout_constraintBottom_toBottomOf="parent">
    </ListView>

    <LinearLayout
        android:id="@+id/empty_view"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scroller"
        android:padding="@dimen/general_padding">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/small_padding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/nothing_to_see"
            android:layout_marginBottom="@dimen/small_padding"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_search_err_view"
            android:layout_marginBottom="@dimen/small_padding"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
